force-app/main/default/objects/Investigator__c/Investigator__c.object-meta.xml
<CustomObject>
    <label>Investigator</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Principal Investigator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>