force-app/main/default/objects/Investigator__c/fields/Describe_the_Current_Active_Awards__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_Current_Active_Awards__c</fullName>
    <inlineHelpText>Please describe how the current active awards listed above relate to this application</inlineHelpText>
    <label>Describe the Current Active Awards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>