force-app/main/default/objects/Investigator__c/fields/Describe_Why_Team_Approach_Is_necessary__c.field-meta.xml
<CustomField>
    <fullName>Describe_Why_Team_Approach_Is_necessary__c</fullName>
    <inlineHelpText>to execute this project. Define roles of all investigators and how the project will be managed and led. (Limit 500 words).</inlineHelpText>
    <label>Describe Why Team Approach Is necessary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>