force-app/main/default/objects/Investigator__c/fields/Discipline_expertise__c.field-meta.xml
<CustomField>
    <fullName>Discipline_expertise__c</fullName>
    <label>Discipline/Expertise</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>