force-app/main/default/objects/Investigator__c/fields/Email_of_the_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Email_of_the_Sponsor__c</fullName>
    <label>Email of the Sponsor</label>
    <type>Email</type>
</CustomField>