force-app/main/default/objects/Investigator__c/fields/Experience_Relevant_to_this_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Experience_Relevant_to_this_Proposal__c</fullName>
    <label>Experience Relevant to this Proposal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>