force-app/main/default/objects/Investigator__c/fields/Full_Name_of_the_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_of_the_Coordinator__c</fullName>
    <inlineHelpText>with designation
(only at participating institutions)</inlineHelpText>
    <label>Full Name of the Coordinator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>