force-app/main/default/objects/Investigator__c/fields/Full_Name_of_the_Program_head__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_of_the_Program_head__c</fullName>
    <inlineHelpText>with designation
(only at Lead institution</inlineHelpText>
    <label>Full Name of the Program head</label>
    <length>80</length>
    <type>Text</type>
</CustomField>