force-app/main/default/objects/Investigator__c/fields/Head_of_the_Institution__c.field-meta.xml
<CustomField>
    <fullName>Head_of_the_Institution__c</fullName>
    <inlineHelpText>(full name along with designation</inlineHelpText>
    <label>Head of the Institution</label>
    <type>TextArea</type>
</CustomField>