force-app/main/default/objects/Investigator__c/fields/Highest_Degree__c.field-meta.xml
<CustomField>
    <fullName>Highest_Degree__c</fullName>
    <inlineHelpText>PhD/MD/MBBS-MS/MD-PhD/MPH/equivalent</inlineHelpText>
    <label>Highest Degree</label>
    <length>80</length>
    <type>Text</type>
</CustomField>