force-app/main/default/objects/Investigator__c/fields/Hours_per_week_on_Active_Grants_Projects__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week_on_Active_Grants_Projects__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Number of hours per week to be spent on active grants/fellowships/projects other than this proposed project</inlineHelpText>
    <label>Hours per week on Active Grants/Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>