force-app/main/default/objects/Investigator__c/fields/Hours_per_week_on_Non_Research_Activitiy__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week_on_Non_Research_Activitiy__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Number of hours per week to be spent on non- research activities (E.g. teaching, administration, other institutional responsibilities</inlineHelpText>
    <label>Hours per week on Non Research Activitiy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>