force-app/main/default/objects/Investigator__c/fields/Hours_per_week_on_Project_Proposed_to_IA__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week_on_Project_Proposed_to_IA__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Number of hours per week to be spent on this project proposed to India Alliance</inlineHelpText>
    <label>Hours per week on Project Proposed to IA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>