force-app/main/default/objects/Investigator__c/fields/Hours_per_week_to_be_spent_on_Research__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week_to_be_spent_on_Research__c</fullName>
    <formula>Hours_per_week_on_Active_Grants_Projects__c  +  Hours_per_week_on_Project_Proposed_to_IA__c  +  If_you_are_a_Practicing_Clinician__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours per week to be spent on Research</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>