force-app/main/default/objects/Investigator__c/fields/If_you_are_a_Practicing_Clinician__c.field-meta.xml
<CustomField>
    <fullName>If_you_are_a_Practicing_Clinician__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>please indicate the number of hours per week spent in (1) the clinic and (2) total on this project</inlineHelpText>
    <label>If you are a Practicing Clinician</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>