force-app/main/default/objects/Investigator__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investigators</relationshipLabel>
    <relationshipName>Principal_Investigators</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>