force-app/main/default/objects/Investigator__c/fields/Investigators_Type__c.field-meta.xml
<CustomField>
    <fullName>Investigators_Type__c</fullName>
    <label>Investigator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Co-Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Coordinator 1</fullName>
                <isActive>false</isActive>
                <label>Coordinator 1</label>
            </value>
            <value>
                <fullName>Coordinator 2</fullName>
                <isActive>false</isActive>
                <label>Coordinator 2</label>
            </value>
            <value>
                <fullName>Coordinator 3</fullName>
                <isActive>false</isActive>
                <label>Coordinator 3</label>
            </value>
            <value>
                <fullName>Lead Principal Investigator</fullName>
                <isActive>false</isActive>
                <label>Lead Principal Investigator</label>
            </value>
            <value>
                <fullName>Programme Head</fullName>
                <isActive>false</isActive>
                <label>Programme Head</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>