force-app/main/default/objects/Investigator__c/fields/Is_other_financial_support__c.field-meta.xml
<CustomField>
    <fullName>Is_other_financial_support__c</fullName>
    <label>Is other financial support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>