force-app/main/default/objects/Investigator__c/fields/Is_Programme_Head__c.field-meta.xml
<CustomField>
    <fullName>Is_Programme_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Programme Head</label>
    <type>Checkbox</type>
</CustomField>