force-app/main/default/objects/Investigator__c/fields/Justify_the_Role_of_Pi_And_Co_Pi__c.field-meta.xml
<CustomField>
    <fullName>Justify_the_Role_of_Pi_And_Co_Pi__c</fullName>
    <inlineHelpText>Justify the requirement/role of each PI and Co-PIs on the project. (limit 400 words)]</inlineHelpText>
    <label>Justify the Role of Pi And Co-Pi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>