force-app/main/default/objects/Investigator__c/fields/Name_of_the_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Institution__c</fullName>
    <label>Name of the Institution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>