force-app/main/default/objects/Investigator__c/fields/Name_of_the_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Sponsor__c</fullName>
    <label>Name of the Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>