force-app/main/default/objects/Investigator__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>