force-app/main/default/objects/Investigator__c/fields/Number_of_total_working_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Number_of_total_working_hours_per_week__c</fullName>
    <formula>Hours_per_week_on_Non_Research_Activitiy__c  +  Hours_per_week_to_be_spent_on_Research__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of total working hours per week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>