force-app/main/default/objects/Investigator__c/fields/ORCID_ID__c.field-meta.xml
<CustomField>
    <fullName>ORCID_ID__c</fullName>
    <label>ORCID ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>