force-app/main/default/objects/Investigator__c/fields/Other_affiliations__c.field-meta.xml
<CustomField>
    <fullName>Other_affiliations__c</fullName>
    <label>Other affiliations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>