force-app/main/default/objects/Investigator__c/fields/Other_financial_support__c.field-meta.xml
<CustomField>
    <fullName>Other_financial_support__c</fullName>
    <inlineHelpText>2014 Onwards</inlineHelpText>
    <label>Other financial support</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>