force-app/main/default/objects/Investigator__c/fields/Percentage_of_total_funds__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_total_funds__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Percentage of total funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>