force-app/main/default/objects/Investigator__c/fields/Please_specify_your_medical_degree__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_your_medical_degree__c</fullName>
    <inlineHelpText>should be answered by only those PIs (including Lead PI) who have a medical/dental degree.</inlineHelpText>
    <label>Please specify your medical degree</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>