force-app/main/default/objects/Investigator__c/fields/Related_applications__c.field-meta.xml
<CustomField>
    <fullName>Related_applications__c</fullName>
    <inlineHelpText>Has a similar application been submitted / will be submitted for funding elsewhere? If yes, please provide following details: (i) Name of the funding organisation; (ii) Expected decision date; and (iii) Brief summary</inlineHelpText>
    <label>Related applications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>