force-app/main/default/objects/Investigator__c/fields/Research_Output_in_last_5_years__c.field-meta.xml
<CustomField>
    <fullName>Research_Output_in_last_5_years__c</fullName>
    <inlineHelpText>2014 onwards</inlineHelpText>
    <label>Research Output in last 5 years</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>