force-app/main/default/objects/Investigator__c/fields/Selected_CV__c.field-meta.xml
<CustomField>
    <fullName>Selected_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected CV</label>
    <type>Checkbox</type>
</CustomField>