force-app/main/default/objects/Investigator__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>