force-app/main/default/objects/Investigator__c/fields/Source_of_personal_salary_support__c.field-meta.xml
<CustomField>
    <fullName>Source_of_personal_salary_support__c</fullName>
    <inlineHelpText>if you are seeking salary support from this grant application. Also be specific if your current salary is funded from more than one source. Indicate with an asterisk (*) those sources of salary support that have contributed to the background of proposal</inlineHelpText>
    <label>Source of personal salary support</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>