force-app/main/default/objects/Investigator__c/fields/Summary_of_Scientific_Career_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Scientific_Career_to_Date__c</fullName>
    <inlineHelpText>Summary of scientific career to date, including key achievements</inlineHelpText>
    <label>Summary of Scientific Career to Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>