force-app/main/default/objects/Investigator__c/fields/Time_Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Commitment_Type__c</fullName>
    <label>Time Commitment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>TSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>