force-app/main/default/objects/Investigator__c/fields/Title_of_current_Post__c.field-meta.xml
<CustomField>
    <fullName>Title_of_current_Post__c</fullName>
    <label>Title of current Post</label>
    <length>80</length>
    <type>Text</type>
</CustomField>