force-app/main/default/objects/Investigator__c/fields/Total_cost_under_Pl_Salary_Ahead__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_under_Pl_Salary_Ahead__c</fullName>
    <inlineHelpText>Total cost requested under PI salary head:</inlineHelpText>
    <label>Total cost under Pl Salary Ahead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>