force-app/main/default/objects/Investigator__c/fields/Total_Funds_requested_INR__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_requested_INR__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Funds requested (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>