force-app/main/default/objects/Investigator__c/fields/what_is_your_specialty_Active__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_specialty_Active__c</fullName>
    <inlineHelpText>should be answered by only those PIs (including Lead PI) who have a medical/dental degree.</inlineHelpText>
    <label>What is your specialty?(Active))</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>