force-app/main/default/objects/Investigator__c/fields/Will_be_submitted_for_funding__c.field-meta.xml
<CustomField>
    <fullName>Will_be_submitted_for_funding__c</fullName>
    <label>Will be submitted for funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>