force-app/main/default/objects/Investigator__c/fields/Year_2__c.field-meta.xml
<CustomField>
    <fullName>Year_2__c</fullName>
    <label>Year 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>