force-app/main/default/objects/Investigator__c/fields/Years_of_Running_Research_Group_Lab__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Running_Research_Group_Lab__c</fullName>
    <inlineHelpText>For how many years have you been running an independent research group or lab?</inlineHelpText>
    <label>Years of Running Research Group/Lab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>