force-app/main/default/objects/Investigator__c/fields/Your_Contract_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Your_Contract_of_Employment__c</fullName>
    <inlineHelpText>With whom do you have your contract of employment?</inlineHelpText>
    <label>Your Contract of Employment?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>