force-app/main/default/objects/Investigator__c/validationRules/Investigator_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Investigator_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(Is_Programme_Head__c) &amp;&amp;  ISBLANK( TEXT(Investigators_Type__c)) , true, false)</errorConditionFormula>
    <errorDisplayField>Investigators_Type__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>