force-app/main/default/objects/Investigator__c/validationRules/Program_Head_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Head_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Is_Programme_Head__c &amp;&amp; ISBLANK( TEXT(Type__c)) , true, false)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>