force-app/main/default/objects/Investigator__c/validationRules/Validate_ORCID_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_ORCID_ID</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(ORCID_ID__c ),
REGEX( ORCID_ID__c , &quot;[0-9 a-z A-Z]{4}-[0-9 a-z A-Z]{4}-[0-9 a-z A-Z]{4}-[0-9 a-z A-Z]{4}&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>ORCID_ID__c</errorDisplayField>
    <errorMessage>Invalid ORCID ID format - [XXXX-XXXX-XXXX-XXXX]</errorMessage>
</ValidationRule>